# PhyLiNO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: mpi.cmake
libraries/: CMakeLists.txt
libraries/io/: CmakeLists.txt  Constants.h  DCOptions.h  DataBase.cpp  DataBase.h  InputOptionBase.h  InputOptions.cpp  InputOptions.h  InputParameter.h  InputPaths.cpp  InputPaths.h  Options.cpp  Options.h  Parameter.h  ParameterValue.h  ReactorData.cpp  ReactorData.h  StartingParameter.h  TreeEntry.h
libraries/io/DoubleChooz/: Constants.h  DCDetectorPaths.cpp  DCDetectorPaths.h  DCInputOptions.cpp  DCInputOptions.h  DCOptions.h  DataBase.cpp  DataBase.h  DetectorPaths.cpp  DetectorPaths.h  InputPaths.cpp  InputPaths.h  StartingParameter.cpp  StartingParameter.h
libraries/likelihood/: BackgroundBase.h  CMakeLists.txt  DCParameterWrapper.cpp  DCParameterWrapper.h  Definitions.h  Fit.cpp  Fit.h  Fitter.cpp  Fitter.h  Likelihood.cpp  Likelihood.h  Oscillator.cpp  Oscillator.h  ParameterWrapper.cpp  ParameterWrapper.h  SpectrumBase.h
libraries/likelihood/DoubleChooz/: AccidentalBackground.cpp  AccidentalBackground.h  BackgroundBase.h  Calculate_Spectrum.h  DCBackground.cpp  DCBackground.h  DCLikelihood.cpp  DCLikelihood.h  DCParameterWrapper.cpp  DCParameterWrapper.h  DNCBackground.cpp  DNCBackground.h  EnergyCorrection.cpp  EnergyCorrection.h  FastNBackground.cpp  FastNBackground.h  Likelihood.cpp  Likelihood.h  LithiumBackground.cpp  LithiumBackground.h  OscillationData.h  Oscillator.cpp  Oscillator.h  ParameterWrapper.cpp  ParameterWrapper.h  RangeOscillator.h  ReactorSpectrum.cpp  ReactorSpectrum.h  ShapeCorrection.cpp  ShapeCorrection.h  SpectrumBase.h  ThreeFlavorOscillation.cpp  ThreeFlavorOscillation.h
libraries/results/: CMakeLists.txt  perform_fit.h  profile_likelihood_scan.h  write_results.cpp  write_results.h
libraries/utilities/: CMakeLists.txt  FuzzyCompare.h
programs/: CMakeLists.txt
programs/LLHFit/: CMakeLists.txt  LLHFit.C
